# knownet

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE_10_TASKS.md  PHASE_11_TASKS.md  PHASE_12_TASKS.md  PHASE_13_TASKS.md  PHASE_14_TASKS.md  PHASE_15_TASKS.md  PHASE_16_TASKS.md  PHASE_2_TASKS.md  PHASE_3_TASKS.md  PHASE_5_TASKS.md  PHASE_6_TASKS.md  PHASE_7_TASKS.md  PHASE_8_TASKS.md  README.md  docker-compose.yml
.cargo/: config.toml
apps/api/: pyproject.toml
apps/api/knownet_api/: audit.py  config.py  main.py  paths.py  security.py  status.py
apps/api/tests/: conftest.py  fixture_utils.py  test_citation_verifier.py  test_cloudflare_access.py  test_collaboration_review_parser.py  test_draft_service.py  test_embedding_service.py  test_integration.py  test_model_provider_adapters.py  test_obsidian_io.py  test_operational_flow.py  test_operator_routes.py  test_page_links.py  test_phase15_integration.py  test_phase16_model_runner.py  test_phase22_standard_absorption.py  test_phase24_fts_search.py  test_phase25_contracts.py  test_phase27_sarif.py  test_phase28_sarif_location.py  test_phase29_db_v2_migration.py  test_phase31_v2_boot.py  test_phase31_v2_collaboration.py  test_phase3_auth.py  test_phase4_citations.py  test_phase5_graph.py  test_phase6_ops.py  test_phase7_collaboration.py  test_phase9_agent_access.py  test_semantic_search.py  test_source_selector.py  test_suggestion_diff.py
apps/mcp/: pyproject.toml
apps/mcp/client_profiles/: chatgpt.json  claude.json  deepseek.json  gemini.json  glm.json  kimi.json  manus.json  minimax.json  qwen.json
(+222 files in other folders)
