[project]
name = "knownet-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pytest>=8.0",
  "python-frontmatter>=1.1",
  "PyYAML>=6.0",
  "sarif-om>=1.0.4",
  "sentence-transformers>=2.7"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow and not smoke'"
markers = [
  "smoke: end-to-end smoke tests that use isolated data directories",
  "slow: slower operational or restore/import tests reserved for release checks"
]
